--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,6 +53,13 @@ jobs:
         run: |
           mlflow models build-docker --model-uri "runs:/$RUN_ID/model" --name "cc" 
 
+      # DEBUG STEP: Check secrets and envs
+      - name: Debug Secrets and Envs
+        run: |
+          echo "DOCKER_HUB_USERNAME: ${{ secrets.DOCKER_HUB_USERNAME }}"
+          echo "DOCKER_HUB_ACCESS_TOKEN Length: ${#DOCKER_HUB_ACCESS_TOKEN}"
+          echo "CSV_URL: $CSV_URL"
+      
       # Login to Docker Hub
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
