--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -56,23 +56,23 @@ jobs:
       # DEBUG STEP: Check secrets and envs
       - name: Debug Secrets and Envs
         run: |
-          echo "DOCKER_HUB_USERNAME: ${{ secrets.DOCKER_HUB_USERNAME }}"
-          echo "DOCKER_HUB_ACCESS_TOKEN Length: ${#DOCKER_HUB_ACCESS_TOKEN}"
+          echo "DOCKER_HUB_USERNAME: ${{ secrets.USERNAME_DOCKER }}"
+          echo "DOCKER_HUB_ACCESS_TOKEN Length: ${#TOKEN_DOCKER}"
           echo "CSV_URL: $CSV_URL"
       
       # Login to Docker Hub
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
         with:
-          username: ${{ secrets.DOCKER_HUB_USERNAME }}
-          password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
+          username: ${{ secrets.USERNAME_DOCKER }}
+          password: ${{ secrets.TOKEN_DOCKER }}
 
       # Tag the Docker image
       - name: Tag Docker Image
         run: |
-          docker tag cc ${{ secrets.DOCKER_HUB_USERNAME }}/cc:latest
+          docker tag cc ${{ secrets.USERNAME_DOCKER }}/cc:latest
 
       # Push Docker image to Docker Hub
       - name: Push Docker Image
         run: |
-          docker push ${{ secrets.DOCKER_HUB_USERNAME }}/cc:latest
+          docker push ${{ secrets.USERNAME_DOCKER }}/cc:latest
