--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,62 +17,53 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE
       - uses: actions/checkout@v3
 
-      # Setup Python 3.12.7
-      - name: Set up Python 3.12.7
+      - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: "3.12.7"
       
-      # Check Env Variables
-      - name: Check Env
-        run: |
-          echo $CSV_URL
-      # Install mlflow
+      - name: Check CSV_URL
+        run: echo "CSV_URL is $CSV_URL"
+      
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install mlflow  
-          
-      # Run as a mlflow project
+          pip install mlflow
+
       - name: Run mlflow project
         run: |
           mlflow run MLproject --env-manager=local 
-      
-      # Get latest run_id
+
       - name: Get latest MLflow run_id
+        id: get_run_id
         run: |
           RUN_ID=$(ls -td mlruns/0/*/ | head -n 1 | cut -d'/' -f3)
-          echo "RUN_ID=$RUN_ID" >> $GITHUB_ENV
+          echo "run_id=$RUN_ID" >> $GITHUB_OUTPUT
           echo "Latest run_id: $RUN_ID"
-          
-      # Build Docker Model
-      - name: Build Docker Model
-        run: |
-          mlflow models build-docker --model-uri "runs:/$RUN_ID/model" --name "cc" 
-
-      # DEBUG STEP: Check secrets and envs
-      - name: Debug Secrets and Envs
-        run: |
-          echo "DOCKER_HUB_USERNAME: ${{ secrets.USERNAME_DOCKER }}"
-          echo "DOCKER_HUB_ACCESS_TOKEN Length: ${#TOKEN_DOCKER}"
-          echo "CSV_URL: $CSV_URL"
       
-      # Login to Docker Hub
-      - name: Log in to Docker Hub
+      - name: Build Docker Image from MLflow model
+        run: |
+          mlflow models build-docker --model-uri "runs:/${{ steps.get_run_id.outputs.run_id }}/model" --name "cc"
+
+      - name: Validate Docker Secrets
+        run: |
+          if [ -z "${{ secrets.USERNAME_DOCKER }}" ] || [ -z "${{ secrets.TOKEN_DOCKER }}" ]; then
+            echo "🚨 Secrets not available. Please set USERNAME_DOCKER and TOKEN_DOCKER in repo settings."
+            exit 1
+          fi
+
+      - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.USERNAME_DOCKER }}
           password: ${{ secrets.TOKEN_DOCKER }}
 
-      # Tag the Docker image
-      - name: Tag Docker Image
+      - name: Tag Docker image
         run: |
           docker tag cc ${{ secrets.USERNAME_DOCKER }}/cc:latest
 
-      # Push Docker image to Docker Hub
-      - name: Push Docker Image
+      - name: Push Docker image
         run: |
           docker push ${{ secrets.USERNAME_DOCKER }}/cc:latest
